fixed too large margin on the registration-info div

--- a/css/less/styles.less
+++ b/css/less/styles.less
@@ -92,7 +92,7 @@ body {
 }
 
 .registration-info {
-	width: 379px !important; // one pixel less than span5
+	margin-left: 20px;
 }
 
 .statistics {
